# Jieqi-hybrid

./: .gitignore  README.md
.virtual_documents/test/: Untitled.ipynb
game/: CMakeLists.txt  pyproject.toml
game/src/: main.cpp  version.h
game/src/chess/: bitboard.cc  board.cc  board.h  dboard.cpp  dboard.h  position.cc  position.h  uciloop.cc
game/src/nn/: encoder.cpp  encoder.h  policy_map.h
game/src/search/: PIMCTS.cpp  PIMCTS.h  determinized_game.cpp  determinized_game.h
game/src/utils/: bititer.h  hashcat.h  pool_allocator.cpp  pool_allocator.h  stringutils.cc
game/test/: run_tests.cpp
test/: FEN_Visualizer.html  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  eval_small.json  factory.py  loop_test.py  model.py  my_leela_model.json  sample_selfplay.py  selfplay_2.py  selfplay_loop.py  simple_trainer.py  startpos.py  startpos_test.py
test/.virtual_documents/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb
test/legacy/: eval_small_step0.json
test/pimcts_training_data/: Untitled.ipynb  pimcts_stats.json
